# libjetbeep-usb

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  eclipse.sh  libjetbeep.code-workspace
delphi/: .gitignore  AutoDeviceImports.pas  CMakeLists.txt  DeviceHandler.pas  README.md  jetbeep.groupproj  jetbeep.groupproj.local  jetbeep_example.dpr  jetbeep_example.dproj  jetbeep_example.dproj.local  libjetbeep.dpk  libjetbeep.dproj  libjetbeep.dproj.local  libjetbeep.res
delphi/example/: README.md
delphi/headers/: .gitignore  AutoDevice.pas  AutoDeviceImport.pas  EasyPayBackend.pas  EasyPayBackendImport.pas  JetBeepTypes.pas  Logger.pas  LoggerImport.pas
dfu-module/: CMakeLists.txt  delay_connect.h  dfu.c  dfu_main.cpp  dfu_serial.c  logging.cpp  logging.h  packages_search.cpp  serial_device.cpp  serial_device.hpp  sync_serial_device.cpp  uart_drv.c  uart_drv.cpp  uart_drv.h  uart_slip.h
dfu-module/include/: delay_connect.h  dfu_main.hpp  dfu_serial.h  ext_error.h  ext_error_string.hpp  logging.h  packages_search.hpp  sync_serial_device.hpp  uart_slip.h
dfu-module/src/: delay_connect.c  dfu.c  dfu_main.cpp  dfu_serial.c  ext_error.cpp  logging.cpp  packages_search.cpp  sync_serial_device.cpp  uart_drv.cpp  uart_slip.c
examples/: CMakeLists.txt  cmd.cpp  cmd.h  cmd.hpp  main.cpp  promise_test.cpp  promise_test.hpp
examples/autodevice/: CMakeLists.txt  cmd.cpp  cmd.hpp  main.cpp
examples/detection-and-serial/: CMakeLists.txt  cmd.cpp  cmd.hpp  main.cpp  promise_test.cpp  promise_test.hpp  utils.cpp  utils.hpp
examples/nfc-detection/: CMakeLists.txt  main.cpp
examples/token-payment/: CMakeLists.txt  main.cpp
jni/: README.md  build.gradle.kts  settings.gradle.kts
jni/example/: README.md  build.gradle.kts
jni/example/src/main/java/example/: DeviceHandler.java  EasyPayHandler.java  MFCApiProviderImpl.java  Main.java
jni/libjetbeep-jni/: .gitignore  AutoDevice.cpp  CMakeLists.txt  EasyPayBackend.cpp  JetBeep.cpp  Library.cpp  Logger.cpp  MFCApiProvider.cpp  com_jetbeep_JetBeep.h  jni-utils.cpp  jni-utils.hpp
jni/libjetbeep-jni-java/: build.gradle.kts
jni/libjetbeep-jni-java/src/main/java/com/jetbeep/: .gitignore  AutoDevice.java  Barcode.java  EasyPayBackend.java  JetBeep.java  Library.java  Logger.java
jni/libjetbeep-jni-java/src/main/java/com/jetbeep/nfc/: CardInfo.java  DetectionError.java  DetectionEvent.java
jni/libjetbeep-jni-java/src/main/java/com/jetbeep/nfc/mifare_classic/: MFCApiProvider.java  MFCBlockData.java  MFCKey.java  MFCOperationException.java
lib/: CMakeLists.txt  README.md  libjetbeep.cpp  libjetbeep.h  libjetbeep.hpp  test2.cpp
lib/c-binding/: api.h  autodevice.cpp  autodevice.h  easypay_backend.cpp  easypay_backend.h  logger.cpp  logger.h  version.cpp  version.h
lib/detection/: detection.cpp  detection.h  detection.hpp  detection_linux.cpp  detection_mac.cpp  detection_win.cpp
lib/device/: auto_device.cpp  auto_device.hpp  auto_device_impl.cpp  auto_device_impl.hpp  barcode.hpp  device.cpp  device.hpp  device_errors.hpp  device_parameter.hpp  device_types.hpp  device_utils.cpp  device_utils.hpp  nfc_types.hpp  payment_error.hpp  serial_device.cpp  serial_device.hpp  serial_device_impl.cpp  serial_device_impl.hpp
lib/device/nfc/: nfc-api-provider.cpp  nfc-api-provider.hpp  nfc_types.hpp
lib/device/nfc/mifare-classic/: mfc-provider.cpp  mfc-provider.hpp  mfc-provider_impl.cpp  mfc-provider_impl.hpp
lib/https/: easypay_backend.cpp  easypay_backend.hpp  easypay_request.cpp  easypay_request.hpp  easypay_response.cpp  easypay_response.hpp  http_errors.hpp  https_client.cpp  https_client.hpp  https_response.hpp  portal_backend.cpp  portal_backend.hpp  portal_request.cpp  portal_request.hpp  portal_response.cpp  portal_response.hpp
lib/https/https_client/: https_client.hpp  https_client_beast.cpp  https_client_boost.cpp  https_client_linux.cpp  https_client_mac.mm  https_client_win.cpp
lib/io/: iocontext.cpp  iocontext.hpp  iocontext_impl.cpp  iocontext_impl.hpp
lib/utils/: logger.cpp  logger.h  logger.hpp  platform.h  platform.hpp  promise.hpp  promise_void.hpp  split.cpp  split.hpp  utils.cpp  utils.hpp  version.cpp  version.hpp
lib/utils/cryptlite/: base64.h  sha256.h
